MKV: Handle file with no duration or 0 duration

Close #6137
Fixes issue in http://forum.videolan.org/viewtopic.php?f=14&t=98525

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>